--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,14 @@
-name: GitHub Actions Demo
+name: Review request
 on:
-  issues:
+  pull_request:
     types:
       - opened
       - reopened
 jobs:
-  Auto-assign:
+  review-request:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
     steps:
       - uses: actions/github-script@v6
         with:
           script: |
-            github.rest.issues.addLabels({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ["triage"]
-            })
+            require('./script/reviewRequest.js')({github, context})
