--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,7 @@ jobs:
           script: |
             const fs = require('fs');
             fs.readdir('./', (err, files) => {
+              console.log(files.length);
               files.forEach(file => {
                 console.log(file);
               });
